--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,15 @@
   "description": "Desarrollo de API para Ingeniería de Software",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Grupo 8",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
